#7 status:"In Progress" time :1

--- a/META-INF/plugin.xml
+++ b/META-INF/plugin.xml
@@ -4,6 +4,7 @@
   ~ by T73 Biz (http://t73.biz)
   -->
 
+<!--suppress XmlUnboundNsPrefix -->
 <idea-plugin version="2">
   <id>biz.t73.teamPulseIntegration</id>
   <name>TeamPulse Integration</name>
